# base_code-v2

./: .gitignore  LICENSE  README.md  instruction.txt  instruction.txt~
SOSvr/devel/: .catkin  .rosinstall  setup.sh
SOSvr/src/setup/: package.xml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/frontier_exploration/: ExploreTaskAction.h  ExploreTaskActionFeedback.h  ExploreTaskActionGoal.h  ExploreTaskActionResult.h  ExploreTaskFeedback.h  ExploreTaskGoal.h  ExploreTaskResult.h  Frontier.h  GetNextFrontierRequest.h  GetNextFrontierResponse.h  UpdateBoundaryPolygonRequest.h  UpdateBoundaryPolygonResponse.h
devel/include/husky_msgs/: HuskyStatus.h
devel/lib/explore_lite/: explore
devel/lib/frontier_exploration/: explore_client  explore_server  frontier_creater
devel/lib/multirobot_map_merge/: map_merge
devel/lib/pkgconfig/: explore_lite.pc  frontier_exploration.pc  husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_ur5_moveit_config.pc  multirobot_map_merge.pc  setup.pc
devel/lib/setup/: image_node  (+1 more)
src/aut_exploration/: CMakeLists.txt  package.xml
src/detect_msgs/: CMakeLists.txt  package.xml
src/frontier_exploration/: CMakeLists.txt~
src/map_markers/: CMakeLists.txt  package.xml
src/rqt_sosvr_controller/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_sosvr_controller/resource/: MyPlugin.ui
src/rqt_sosvr_controller/scripts/: rqt_sosvr_controller
src/rqt_sosvr_controller/src/rqt_sosvr_controller/: my_module.py
src/setup/: CMakeLists.txt  package.xml
(+276 files in other folders)
